// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metric trends useClosedTicketsTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "TicketState.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
  ],
  "measures": [
    "TicketState.ticketCount",
  ],
  "segments": [
    "TicketState.closedTickets",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useCustomerSatisfactionTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "TicketState.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
  ],
  "measures": [
    "TicketState.surveyScore",
  ],
  "segments": [
    "TicketState.surveyScored",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useFirstResponseTimeTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.firstHelpdeskMessageDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00+02:00",
        "2021-06-04T23:59:59+02:00",
      ],
    },
    {
      "member": "TicketState.firstHelpdeskMessageUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
  ],
  "measures": [
    "TicketState.firstResponseTime",
  ],
  "segments": [
    "TicketState.conversationStarted",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useMessagesPerTicketTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "TicketState.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
  ],
  "measures": [
    "TicketState.messagesAverage",
  ],
  "segments": [
    "TicketState.closedTickets",
    "TicketState.conversationStarted",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useMessagesSentTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "MessageState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "MessageState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "MessageState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "MessageState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "MessageState.senderId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "MessageState.sentDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00+02:00",
        "2021-06-04T23:59:59+02:00",
      ],
    },
  ],
  "measures": [
    "MessageState.messageCount",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useResolutionTimeTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "TicketState.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
  ],
  "measures": [
    "TicketState.resolutionTime",
  ],
  "segments": [
    "TicketState.closedTickets",
    "TicketState.conversationStarted",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useTicketsCreatedTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "TicketState.createdDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00+02:00",
        "2021-06-04T23:59:59+02:00",
      ],
    },
    {
      "member": "TicketState.isTrashed",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.isSpam",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "TicketState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "TicketState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "TicketState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "TicketState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "TicketState.assigneeUserId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
  ],
  "measures": [
    "TicketState.ticketCount",
  ],
  "timezone": "UTC",
}
`;

exports[`metric trends useTicketsRepliedTrend should create reporting filters 1`] = `
{
  "dimensions": [],
  "filters": [
    {
      "member": "MessageState.periodStart",
      "operator": "afterDate",
      "values": [
        "2021-05-29T00:00:00.000",
      ],
    },
    {
      "member": "MessageState.periodEnd",
      "operator": "beforeDate",
      "values": [
        "2021-06-04T23:59:59.000",
      ],
    },
    {
      "member": "MessageState.integration",
      "operator": "equals",
      "values": [
        "1",
      ],
    },
    {
      "member": "MessageState.channel",
      "operator": "equals",
      "values": [
        "email",
        "chat",
      ],
    },
    {
      "member": "MessageState.senderId",
      "operator": "equals",
      "values": [
        "2",
      ],
    },
    {
      "member": "MessageState.sentDatetime",
      "operator": "inDateRange",
      "values": [
        "2021-05-29T00:00:00+02:00",
        "2021-06-04T23:59:59+02:00",
      ],
    },
    {
      "member": "MessageState.isOnTrashedTicket",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "MessageState.isOnSpamTicket",
      "operator": "equals",
      "values": [
        "0",
      ],
    },
    {
      "member": "MessageState.channel",
      "operator": "notEquals",
      "values": [
        "internal-note",
      ],
    },
  ],
  "measures": [
    "MessageState.ticketCount",
  ],
  "timezone": "UTC",
}
`;
